# GeometricShapes

./: .gitignore  CMakeLists.txt
src/: AbstractShape.cpp  AbstractShape.h  Circle.h  ComplexShape.cpp  ComplexShape.h  MainMenu.h  Point.cpp  Point.h  Quadrangle.h  Rectangle.h  Rhombus.h  SandBox.cpp  Shape.cpp  Shape.h  Trapezoid.h  Triangle.h  main.cpp  main_CLI.cpp
src/AbstractShapeSubclasses/: AbstractEllipse.cpp  AbstractEllipse.h  AbstractPolygon.cpp  AbstractPolygon.h  Polygon.h
src/AbstractShapeSubclasses/AbstractEllipseSubclasses/: Circle.cpp  Circle.h  Ellipse.cpp  Ellipse.h
src/AbstractShapeSubclasses/AbstractPolygonSubclasses/: AbstractQuadrilateral.cpp  AbstractQuadrilateral.h  ConvexPolygon.cpp  ConvexPolygon.h  Polygon.cpp  Polygon.h  Quadrilateral.h  SimplePolygon.cpp  SimplePolygon.h  Triangle.cpp  Triangle.h
src/AbstractShapeSubclasses/AbstractPolygonSubclasses/AbstractQuadrilateralSubclasses/: Rectangle.cpp  Rectangle.h  Rhombus.cpp  Rhombus.h  Trapezoid.cpp  Trapezoid.h
src/AbstractShapeSubclasses/AbstractPolygonSubclasses/QuadrilateralSubclasses/: Rectangle.h  Rhombus.h  Trapezoid.h
src/AbstractShapeSubclasses/PolygonSubclasses/QuadrilateralSubclasses/: Rectangle.h
src/Gtk/: DrawingArea.cpp  DrawingArea.h  Notebook.cpp  Notebook.h  Window.cpp  Window.h
src/QT/: Draw.h  RenderArea.cpp  RenderArea.h  Widget.cpp  Widget.h  widget.cpp  widget.h  widget.ui
src/ShapeSubclasses/: AbstractEllipse.cpp  AbstractEllipse.h  Circle.cpp  Circle.h  Ellipse.cpp  Ellipse.h  Polygon.h  Quadrangle.cpp  Quadrangle.h  Quadrilateral.cpp  Quadrilateral.h  Rectangle.cpp  Rectangle.h  Rhombus.h  Trapezoid.h  Triangle.h
src/ShapeSubclasses/AbstractEllipseSubclasses/: Circle.cpp  Circle.h  Ellipse.cpp  Ellipse.h
src/ShapeSubclasses/PolygonSubclasses/: Quadrilateral.h  Triangle.h
src/ShapeSubclasses/PolygonSubclasses/QuadrilateralSubclasses/: Trapezoid.h
src/ShapeSubclasses/QuadrangleSubclasses/: Rectangle.h
src/Shapes/: AbstractShape.cpp  AbstractShape.h  ComplexShape.cpp  ComplexShape.h  Point.cpp  Point.h  ShapeFactory.cpp  ShapeFactory.h
src/Shapes/AbstractShapeSubclasses/: AbstractEllipse.cpp  AbstractEllipse.h  AbstractPolygon.cpp  AbstractPolygon.h
src/Shapes/AbstractShapeSubclasses/AbstractEllipseSubclasses/: Circle.cpp  Circle.h  Ellipse.cpp  Ellipse.h
src/Shapes/AbstractShapeSubclasses/AbstractPolygonSubclasses/: AbstractQuadrilateral.cpp  AbstractQuadrilateral.h  SimplePolygon.cpp  SimplePolygon.h  Triangle.cpp  Triangle.h
src/Shapes/AbstractShapeSubclasses/AbstractPolygonSubclasses/AbstractQuadrilateralSubclasses/: Rectangle.cpp  Rectangle.h  Rhombus.cpp  Rhombus.h  Trapezoid.cpp  Trapezoid.h
